# rust.zsh-seq

./: Cargo.toml  zsh-seq.md
examples/: complex_prompt.rs
src/: builder.rs  colors.rs  lib.rs  main.rs  sequences.rs  shell.rs  traits.rs
src/sequences/: tests.rs  translator.rs
src/sequences/tests/: bash.rs  fish.rs  pwsh.rs  tmux.rs  zsh.rs
src/sequences/translator/: bash.rs  fish.rs  pwsh.rs  tmux.rs  zsh.rs
