[package]
name = "zsh-seq"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.12"
hostname = "0.4.2"
regex = "1.12.2"
unicode-width = "0.2.2"
users = "0.11.0"

[lib]
name = "zsh_seq"
path = "src/lib.rs"

[[bin]]
name = "zsh_seq_cli"
path = "src/main.rs"
